[package]
name = "rs-keyval2asn1"
version = "0.1.0"
edition = "2024"

description = "Convert a key/val pair to asn.1 der bytes"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-keyval2asn1/latest"
repository = "https://github.com/takanoriyanagitani/rs-keyval2asn1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.der]
version = "0.7.10"
default-features = false
features = [
	"derive",
	"std",
]
